--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-discord.py==2.8.1
-python-dotenv==1.0.0
-pymongo==4.2.0
-flask==2.3.2
-prettytable==3.2.0
+discord.py
+python-dotenv
+pymongo
+prettytable
+Flask
+
